--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 /* Style The header */
 
-header {
+nav {
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -62,6 +62,8 @@ h1 {
   color: #7f8cff;
   margin-top: 12px;
   text-decoration: none;
+  text-transform:uppercase;
+  
 }
 
 ul {
@@ -75,4 +77,5 @@ ul {
 .icon {
   float: left;
   margin-right: 26px;
+  color: #505f79;
 }
