--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ nav {
   text-decoration: none;
 }
 
+.new-logo {
+  width: 30px;
+}
+
 .Menu-Icon {
   width: 24px;
   height: 3px;
@@ -565,7 +569,7 @@ ul {
 .canopy {
   color: rgba(0, 0, 0, 0.644);
   font-size: 10px;
-  margin: 10px 5% 0  0;
+  margin: 10px 5% 0 0;
 }
 
 .tech-modal {
@@ -698,7 +702,7 @@ ul {
 
   .img {
     margin: 24px;
-    width: auto;
+    width: 80%;
     height: auto;
     border-radius: 8px;
     order: 1;
@@ -823,9 +827,9 @@ ul {
   }
 
   #project-img-modal {
-    width: min-content;
+    width: 80%;
     height: auto;
-    margin-left: 30%;
+    margin-left: 10%;
   }
 
   .modal-details-paragraph {
